--- a/style.css
+++ b/style.css
@@ -24,3 +24,17 @@ body {
     height: 50px;
     font-size: larger;
 }
+
+#startBtn {
+ background-color: lightgreen;
+}
+
+#pauseBtn {
+    background-color: red;
+}
+
+#main {
+    border-left: 1px solid;
+    border-right: 1px solid;
+    border-radius: 10px;
+}
