--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ body {
 }
 
 #startBtn {
- background-color: lightgreen;
+    background-color: lightgreen;
+    border: 0;
+    border-radius: 5px;
 }
 
 #pauseBtn {
