--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ body {
     width: 100px;
 }
 
+#lastRecord > h1{
+    display:  inline-block;
+    background-color: black;
+    color: white;
+    width: 100px;
+}
+
 #timerControls > button {
     width: 100px;
     height: 50px;
@@ -27,19 +34,19 @@ body {
 
 #startBtn {
     background-color: lightgreen;
-    border: 0;
+    border-color: gray;
     border-radius: 5px;
 }
 
 #pauseBtn {
     background-color: red;
+    border-color: gray;
+    border-radius: 5px;
 }
 
 #resetBtn {
     background-color: white;
-    
     border-radius: 5px;
-    border-color: gray;
 }
 
 #main {
