--- a/style.css
+++ b/style.css
@@ -8,22 +8,33 @@ body {
 }
 
 #mainheading {
-    background-color: teal;
+    background-color: #293241;
     color: white;
+    border-radius:10px;
 }
 
 #timer > h1{
     display:  inline-block;
-    background-color: black;
+    background-color: rgba(0,0,0,0);
+    border:2px dashed #ee6c4d;
     color: white;
     width: 100px;
+    border-radius:10px;
+}
+
+#timer > h2{
+    margin-inline:5px;
+    color:#293241;
+    display:inline-block;
+    font-size:40px;
 }
 
 #lastRecord > h1{
     display:  inline-block;
-    background-color: white;
+    border:2px solid #ee6c4d;
     color: black;
-    border: 1px solid;
+    margin-inline:10px;
+    border-radius:20px;
     width: 100px;
 }
 
@@ -35,23 +46,30 @@ body {
 
 #startBtn {
     background-color: lightgreen;
-    border-color: gray;
     border-radius: 5px;
+    border:none;
+    margin-inline:10px;
+    font-weight:bold;
 }
 
 #pauseBtn {
     background-color: red;
-    border-color: gray;
     border-radius: 5px;
+    border:none;
+    margin-inline:10px;
+    font-weight:bold;
 }
 
 #resetBtn {
     background-color: white;
     border-radius: 5px;
+    border:none;
+    margin-inline:10px;
+    font-weight:bold;
 }
 
 #main {
-    border-left: 1px solid;
-    border-right: 1px solid;
-    border-radius: 10px;
+    padding-bottom:50px;
+    background-color:#98c1d9;
+    border-radius: 20px;
 }
